// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Add property Map Screen Component should render property details screen 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <Header
    icon="left-arrow"
    onIconPress={[Function]}
    testID="location"
    title="common:location"
    type="primary"
  />
  <View
    style={
      Object {
        "backgroundColor": "#0084F8",
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "marginBottom": 8,
            "marginTop": 4,
          },
          Object {
            "color": "#FFFFFF",
          },
        ]
      }
      textType="semiBold"
      type="small"
    >
      location
    </Text>
    <Label
      style={
        Array [
          Object {
            "marginBottom": 12,
          },
          Object {
            "color": "#FFFFFF",
          },
        ]
      }
      textType="regular"
      type="regular"
    >
      location2
    </Label>
  </View>
  <MapView
    initialRegion={
      Object {
        "latitude": 1,
        "latitudeDelta": 0.001,
        "longitude": 1,
        "longitudeDelta": 0.001,
      }
    }
    provider="google"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <MapMarker
      coordinate={
        Object {
          "latitude": 1,
          "longitude": 1,
        }
      }
      draggable={true}
      onDragEnd={[Function]}
      stopPropagation={false}
    />
  </MapView>
  <WithShadowView
    outerViewStyle={
      Object {
        "marginBottom": 20,
        "paddingBottom": 0,
      }
    }
  >
    <Button
      containerStyle={
        Object {
          "flex": 0,
          "margin": 16,
        }
      }
      onPress={[Function]}
      title="setLocation"
      type="primary"
    />
  </WithShadowView>
  <BottomSheet
    headerTitle="locationDetails"
    onCloseSheet={[Function]}
    sheetHeight={400}
    visible={false}
  >
    <SetLocationForm
      formData={
        Object {
          "blockNo": "",
          "projectName": "location, location2",
          "unitNo": "",
        }
      }
      onSubmit={[Function]}
    />
  </BottomSheet>
</View>
`;

exports[`Add property Map Screen Component should render snapshot for states 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "flex": 1,
    }
  }
>
  <Header
    icon="left-arrow"
    onIconPress={[Function]}
    testID="location"
    title="common:location"
    type="primary"
  />
  <View
    style={
      Object {
        "backgroundColor": "#0084F8",
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "marginBottom": 8,
            "marginTop": 4,
          },
          Object {
            "color": "#FFFFFF",
          },
        ]
      }
      textType="semiBold"
      type="small"
    >
      location
    </Text>
    <Label
      style={
        Array [
          Object {
            "marginBottom": 12,
          },
          Object {
            "color": "#FFFFFF",
          },
        ]
      }
      textType="regular"
      type="regular"
    >
      location2
    </Label>
  </View>
  <MapView
    initialRegion={
      Object {
        "latitude": 1,
        "latitudeDelta": 0.001,
        "longitude": 1,
        "longitudeDelta": 0.001,
      }
    }
    provider="google"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <MapMarker
      coordinate={
        Object {
          "latitude": 1,
          "longitude": 1,
        }
      }
      draggable={true}
      onDragEnd={[Function]}
      stopPropagation={false}
    />
  </MapView>
  <WithShadowView
    outerViewStyle={
      Object {
        "marginBottom": 20,
        "paddingBottom": 0,
      }
    }
  >
    <Button
      containerStyle={
        Object {
          "flex": 0,
          "margin": 16,
        }
      }
      onPress={[Function]}
      title="setLocation"
      type="primary"
    />
  </WithShadowView>
  <BottomSheet
    headerTitle="locationDetails"
    onCloseSheet={[Function]}
    sheetHeight={400}
    visible={true}
  >
    <SetLocationForm
      formData={
        Object {
          "blockNo": "",
          "projectName": "location, location2",
          "unitNo": "",
        }
      }
      onSubmit={[Function]}
    />
  </BottomSheet>
</View>
`;
